<resources>
    <string name="app_name">HTTP分享工具</string>
    <string name="author_name">Create by Hh7</string>
    <string name="version">V1.0.3</string>

    <string name="ip_text">IP地址：</string>
    <string name="port_text">端口号：</string>

    <string name="start_service_btn">开始共享</string>
    <string name="stop_service_btn">停止共享</string>
    <string name="open_url_btn">打开连接</string>
    <string name="retry_btn">重新检查</string>

    <string name="sys_ok_button">确定</string>
    <string name="sys_cancel_button">取消</string>
    <string name="sys_yes_button">是</string>
    <string name="sys_no_button">否</string>
    <string name="sys_send_button">发送</string>
    <string name="sys_flush_button">刷新</string>
    <string name="sys_infor_title">提示</string>
    <string name="sys_warning_title">警告</string>
    <string name="sys_error_title">错误</string>
    <string name="sys_message_title">文字传输</string>
    <string name="sys_file_list_title">文件列表</string>
    <string name="sys_root_title">根目录</string>
    <string name="sys_internal_title">内部存储</string>
    <string name="sys_external_title">外部存储</string>

    <string name="sys_no_network">没有网络</string>

    <string name="sys_copy_finish">已复制到剪切板</string>
    <string name="sys_exit_app_msg">再按一次退出程序</string>
    <string name="sys_create_qrcode_error_msg">创建二维码失败：%s</string>
    <string name="sys_start_service_error_msg">启动共享服务失败：%s</string>

    <string name="sys_apply_storage_msg">本APP运行必须申请读写存储的权限，重新申请请按“确定”，按“取消”退出APP。</string>

</resources>
