<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:text="@string/ip_text" />

        <TextView
            android:id="@+id/ip_addr_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="99"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="127.0.0.1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:text="@string/port_text" />

        <TextView
            android:id="@+id/port_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="99"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="8090" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/start_stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:enabled="false"
            android:text="@string/start_service_btn" />

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:enabled="false"
            android:text="@string/retry_btn" />
    </LinearLayout>

    <ImageView
        android:id="@+id/qrcode_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_above="@id/relativelayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativelayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/author_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/version" />
    </RelativeLayout>
</RelativeLayout>
